- Working on maintitle and smalltoolboxwrapper so they’re aligned with content properly - Switching to CSS transitions for animating standardtoolboxdropdown and sidebarwrapper - Fixing sidebar zoom issues on iOS - Running [Autoprefixer](https://github.com/ai/autoprefixer) on CSS

--- a/refreshed/big.css
+++ b/refreshed/big.css
@@ -17,8 +17,3 @@
 #smalltoolboxwrapper {
 	display: none;
 }
-
-#contentSub {
-	margin-top: -10px;
-	padding-bottom: 10px;
-}
